--- a/views/404.twig
+++ b/views/404.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<section class="spacing--vert-1 spacing--dsk-vert-4 text--center">
+	<section class="spacing--vert-1 spacing--dsk-vert-4 text--center font--large spacing--gutter max-wrap margin--center">
 	{{options.default.404}}
 </section>
 {% endblock %}
