--- a/scss/_02-components/_section--winery-list.scss
+++ b/scss/_02-components/_section--winery-list.scss
@@ -5,13 +5,29 @@
         // border: 1px solid;
         h2 {
             @include media($screen-sm) {
-                font-size: 2.5rem;
                 -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    -o-hyphens: none;
-    hyphens: none;
+                -moz-hyphens: none;
+                -ms-hyphens: none;
+                -o-hyphens: none;
+                hyphens: none;
             }
+
+
+            @include media($screen-xs) {}
+
+            @include media($screen-sm) {
+                font-size: 2rem;
+            }
+
+            @include media($screen-md) {
+                
+            }
+
+            @include media($screen-lg) {
+                font-size: 2.2rem;
+            }
+
+            @include media($screen-xl) {font-size: 2.5rem;}
         }
     }
 }
