--- a/views/components/sections/section--event-content.twig
+++ b/views/components/sections/section--event-content.twig
@@ -6,5 +6,6 @@
 			<a class="font--large inline-block font--bold icon-underline bg--red color--white text--center spacing--vert-half spacing--horiz-1" href="{{event.tickets.url}}" title="{{event.tickets.title}}" target="{{event.tickets.target}}">{{event.tickets.title}}</a>
 		</div>
 	{% endif %}
-	{{post.content}}
+	{# {{event|print_r}} #}
+	{{event.content}}
 </section>
