--- a/views/base.twig
+++ b/views/base.twig
@@ -23,5 +23,18 @@
 	{{ function('wp_footer') }}
 {% endblock %}
 </body>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-1771534-5']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 <script type="text/javascript" charset="utf-8" async defer>$('#email_address_0').attr('placeholder', 'Email');</script>
 </html>
