Events w/ no img

--- a/views/page-events.twig
+++ b/views/page-events.twig
@@ -7,5 +7,9 @@
 		</section>
 			<div class="max-wrap margin--center spacing--gutter margin--horiz-1">{% include 'components/blocks/block--breadcrumbs.twig' %}</div>
 		{% include 'components/sections/section--child-blocks.twig' with {'eventdisplay': true} %}
+<section class="flex flex--wrap margin--center spacing--gutter">
+	<h1 class="text--center grid--one">Regional Events</h1>
+</section>
+		
 	</article>
 {% endblock %}
