--- a/scss/_02-components/_section--winery-filter.scss
+++ b/scss/_02-components/_section--winery-filter.scss
@@ -4,6 +4,11 @@
             border-color: map-get($brown, dark);
             color: $gray;
             font-size: 1.2rem;
+
+            @include media($max-sm) {
+                width: 60%;
+font-size: 1rem;
+            }
         }
 
         [type="submit"] {
@@ -17,6 +22,13 @@
             padding: 5px 14px;
             font-size: 1rem;
             height: 41px;
+
+            @include media($max-sm) {
+                width: 38%;
+                float: right;
+                height: 37px;
+
+            }
         }
     }
 
