--- a/views/components/sections/section--winery-list.twig
+++ b/views/components/sections/section--winery-list.twig
@@ -1,7 +1,10 @@
 <section class="section--winery-list spacing--gutter max-wrap margin--center">
 {% include 'components/sections/section--winery-filter.twig' %}
+<section id="winerieslist" class="active">
+	
 
 	{% for winery in wineries %}
 		{% include 'components/blocks/block--winery.twig' %}
 	{% endfor  %}
+	</section>
 </section>
