--- a/views/components/sections/section--winery-filter.twig
+++ b/views/components/sections/section--winery-filter.twig
@@ -23,10 +23,10 @@
 		<a class="color--black" href="?date_id=saturday">Saturday</a><span class="hidden--mob spacing--horiz-half">|</span>
 		<a class="color--black" href="?date_id=sunday">Sunday</a>
 	</div>
-	{# <div style="column-count:3;" class="text--center shortlist ">
+	<div style="column-count:3;" class="text--center shortlist hidden--mob">
 {% for winery in wineries %}
 <a href="{{winery.link}}" class="color--brown-dark font--large block">{{winery.title}}</a>
 {% endfor %}
 	</div>
-	<a class="text--right color--brown-dark font--smaller text--uppercase block" id="wineryuitoggle" data-shorttext="Winery Quick Search" data-longtext="Close" href="">Winery Quick Search</a> #}
+	<a class="text--right color--brown-dark font--smaller text--uppercase block hidden--mob" id="wineryuitoggle" data-shorttext="Winery Quick Search" data-longtext="Close" href="">Winery Quick Search</a>
 </section>
